sysdigcloud-kubernetes-2.3.0/sysdigcloud/api-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "haproxy"
    ingress.kubernetes.io/affinity: cookie
    ingress.kubernetes.io/session-cookie-name: INGRESSCOOKIEAPI
  labels:
    app.kubernetes.io/managed-by: ingress-config
    app.kubernetes.io/name: ingress-config
    app.kubernetes.io/part-of: sysdigcloud
    role: ingress-config
    tier: infra
  name: sysdigcloud-api-ingress
spec:
  rules:
    - host: ocp.192.168.54.151.nip.io
      http:
        paths:
          - backend:
              serviceName: sysdigcloud-api
              servicePort: 8080 
            path: /
  tls:
    - hosts:
        - ocp.192.168.54.151.nip.io
      secretName: sysdigcloud-ssl-secret
